[tool.poetry]
name = "traded"
version = "0.2.0"
description = ""
authors = ["Edson"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^1.4.42"
alembic = "^1.8.1"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
pyyaml = "^6.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
flake8-black = "^0.3.3"
flake8-isort = "^5.0.0"
bandit = "^1.7.4"
safety = "^2.3.1"
pytest-randomly = "^3.12.0"
pytest-docker = "^1.0.1"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = '-vvv --cov-report=term-missing --cov=traded'
testpaths = ["tests/unit"]
filterwarnings = [
    'ignore:Dialect sqlite\+pysqlite does \*not\* support Decimal:sqlalchemy.exc.SAWarning',
]

[tool.black]
line-length = 79
