[project]
name = "traded"
version = "0.3.0"
description = "Add your description here"
authors = ["Edson"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.4",
    "sqlalchemy>=2.0.44",
    "toolz>=1.1.0",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.5",
    "safety>=3.7.0",
]

[tool.pytest.ini_options]
addopts = "-vvv --cov-report=term-missing --cov=traded --strict-markers"
testpaths = ["tests"]
log_level = "DEBUG"

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]
exclude = [
    "traded/migrations/versions",
]

[[tool.mypy.overrides]]
module = ["toolz"]
ignore_missing_imports = true
